--- a/ToeicWeb/Areas/Admin/Views/BThi/Index.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/BThi/Index.cshtml
@@ -59,9 +59,9 @@
                     </label>
                     <select id="ExamType" class="form-control" required>
                         <option value="" disabled selected>--Chọn bài thi--</option>
-                        <option value="nghe">Bài thi nghe</option>
-                        <option value="đọc">Bài thi đọc</option>
-                        <option value="tổng hợp">Bài thi tổng hợp</option>
+                        <option value="NGHE">Bài thi nghe</option>
+                        <option value="DOC">Bài thi đọc</option>
+                        <option value="TH">Bài thi tổng hợp</option>
                     </select>
                     <span id="ExamTypeError" class="text-danger"></span>
                 </div>
