--- a/ToeicWeb/Areas/Customer/Views/Home/Index.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/Home/Index.cshtml
@@ -214,9 +214,8 @@
                     </div>
 
                     <div>
-                        <a asp-action="Details"
-                           asp-route-productId="Id"
-                           class="btn btn-primary  form-control ">
+                        <a asp-are="Customer" asp-controller="Thi" asp-action="ThiNGHE"
+                           class="btn btn-primary bg-gradient  form-control">
                             Thi
                         </a>
                     </div>
@@ -242,8 +241,7 @@
                     </div>
 
                     <div>
-                        <a asp-action="Details"
-                           asp-route-productId="Id"
+                        <a asp-are="Customer" asp-controller="Thi" asp-action="ThiDOC"
                            class="btn btn-primary bg-gradient  form-control">
                             Thi
                         </a>
@@ -272,7 +270,7 @@
                     <div>
                         <a asp-are="Customer" asp-controller="Thi" asp-action="ThiTH"
                            class="btn btn-primary bg-gradient  form-control">
-                            Luyện tập
+                            Thi
                         </a>
                     </div>
                 </div>
