--- a/ToeicWeb/Areas/Customer/Views/Thi/PracticeDOC.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/Thi/PracticeDOC.cshtml
@@ -7,27 +7,15 @@
     <div class="row">
         <p class="mt-xxl-3">
             <span class="badge rounded-4 bg-primary">
-                Part 1
-            </span>
-            <span class="badge rounded-4 bg-primary">
-                Part 2
-            </span>
-            <span class="badge rounded-4 bg-primary">
-                Part 3
-            </span>
-            <span class="badge rounded-4 bg-primary">
-                Part 4
-            </span>  
-            <span class="badge rounded-4 bg-primary">
                 Part 5
-            </span> 
+            </span>
             <span class="badge rounded-4 bg-primary">
                 Part 6
-            </span>  
+            </span>
             <span class="badge rounded-4 bg-primary">
                 Part 7
-            </span>  
-           
+            </span>
+
         </p>
         <div class="col-md-8">
             <form asp-action="ResultDetail" method="post" id="tracNghiemForm">
@@ -119,7 +107,7 @@
         <div style="display: flex; flex-wrap: wrap;">
             @for (int i = 0; i < Model.CauHoiBaiThiList.Count; i++)
             {
-                <button id="btn_@Model.CauHoiBaiThiList[i].Id" class="m-1 rounded-3" style="background-color: #fff;font-size: 0.75rem;width:1.75rem" onclick="scrollToQuestion(@Model.CauHoiBaiThiList[i].Id)">
+                <button id="btn_@Model.CauHoiBaiThiList[i].Id" class="m-1 rounded-3" style="background-color: #fff;font-size: 0.75rem;" onclick="scrollToQuestion(@Model.CauHoiBaiThiList[i].Id)">
                     @Model.CauHoiBaiThiList[i].Thu_tu_cau
                 </button>
             }
@@ -128,133 +116,133 @@
 </div>
 
 <script>
-    var remainingTime = 120 * 60; // 120 phút = 7200 giây
-    var timerElement = document.getElementById('timer');
-    var totalTime = 0;
+        var remainingTime = 75 * 60; // 120 phút = 7200 giây
+        var timerElement = document.getElementById('timer');
+        var totalTime = 0;
 
-    function startTimer() {
-        var countdown = setInterval(function () {
-            var minutes = Math.floor(remainingTime / 60);
-            var seconds = remainingTime % 60;
-            seconds = seconds < 10 ? "0" + seconds : seconds;
-            minutes = minutes < 10 ? "0" + minutes : minutes;
-            timerElement.textContent = minutes + ":" + seconds;
+        function startTimer() {
+            var countdown = setInterval(function () {
+                var minutes = Math.floor(remainingTime / 60);
+                var seconds = remainingTime % 60;
+                seconds = seconds < 10 ? "0" + seconds : seconds;
+                minutes = minutes < 10 ? "0" + minutes : minutes;
+                timerElement.textContent = minutes + ":" + seconds;
 
-            // Tăng tổng thời gian làm bài
-            totalTime++;
+                // Tăng tổng thời gian làm bài
+                totalTime++;
 
-            // Giảm thời gian
-            remainingTime--;
+                // Giảm thời gian
+                remainingTime--;
 
-            // Khi hết giờ, tự động nộp bài
-            if (remainingTime < 0) {
-                clearInterval(countdown);
-                autoSubmit();
+                // Khi hết giờ, tự động nộp bài
+                if (remainingTime < 0) {
+                    clearInterval(countdown);
+                    autoSubmit();
+                }
+            }, 1000);
+        }
+
+        window.onload = function () {
+            startTimer();
+        };
+
+        // Khi nộp bài tự động
+    function autoSubmit() {
+        Swal.fire({
+            title: "Hết thời gian!",
+            text: "Bài làm của bạn sẽ được tự động nộp.",
+            icon: "info",
+            timer: 3000,
+            timerProgressBar: true,
+            didClose: () => {
+                showTotalTime(); // Hiển thị tổng thời gian đã làm
+
+                // Lấy thời gian làm bài
+                var minutes = Math.floor(totalTime / 60);
+                var seconds = totalTime % 60;
+                var formattedTime = minutes + ":" + (seconds < 10 ? "0" + seconds : seconds);
+
+                // Tạo input ẩn để lưu tổng thời gian vào form trước khi nộp
+                var totalTimeInput = document.createElement('input');
+                totalTimeInput.type = 'hidden';
+                totalTimeInput.name = 'TotalTime';  // Tên này phải trùng với key trong controller
+                totalTimeInput.value = formattedTime;
+
+                var form = document.getElementById('tracNghiemForm');
+                form.appendChild(totalTimeInput); // Thêm input vào form
+                form.submit();
             }
-        }, 1000);
+        });
     }
 
-    window.onload = function () {
-        startTimer();
-    };
 
-    // Khi nộp bài tự động
-function autoSubmit() {
-    Swal.fire({
-        title: "Hết thời gian!",
-        text: "Bài làm của bạn sẽ được tự động nộp.",
-        icon: "info",
-        timer: 3000,
-        timerProgressBar: true,
-        didClose: () => {
-            showTotalTime(); // Hiển thị tổng thời gian đã làm
 
-            // Lấy thời gian làm bài
+        // Hiển thị tổng thời gian đã làm bài
+        function showTotalTime() {
             var minutes = Math.floor(totalTime / 60);
             var seconds = totalTime % 60;
-            var formattedTime = minutes + ":" + (seconds < 10 ? "0" + seconds : seconds);
-
-            // Tạo input ẩn để lưu tổng thời gian vào form trước khi nộp
-            var totalTimeInput = document.createElement('input');
-            totalTimeInput.type = 'hidden';
-            totalTimeInput.name = 'TotalTime';  // Tên này phải trùng với key trong controller
-            totalTimeInput.value = formattedTime;
-
-            var form = document.getElementById('tracNghiemForm');
-            form.appendChild(totalTimeInput); // Thêm input vào form
-            form.submit();
+            seconds = seconds < 10 ? "0" + seconds : seconds;
+            minutes = minutes < 10 ? "0" + minutes : minutes;
+            var totalTimeElement = document.getElementById('totalTime');
+            if (totalTimeElement) {
+                totalTimeElement.textContent = minutes + ":" + seconds;
+            }
         }
-    });
-}
 
+      function confirmSubmission() {
+        Swal.fire({
+            title: "Bạn có chắc muốn nộp bài?",
+            text: "Bài làm sẽ không thể thay đổi!",
+            icon: "warning",
+            showCancelButton: true,
+            confirmButtonColor: "#3085d6",
+            cancelButtonColor: "#d33",
+            confirmButtonText: "Nộp bài",
+            cancelButtonText: "Hủy"
+        }).then((result) => {
+            if (result.isConfirmed) {
+                Swal.fire({
+                    title: "Đã nộp bài!",
+                    text: "Bài làm của bạn đã được nộp.",
+                    icon: "success",
+                    timer: 3000,
+                    timerProgressBar: true,
+                    didClose: () => {
+                        showTotalTime(); // Hiển thị tổng thời gian đã làm
 
+                        // Lấy thời gian làm bài
+                        var minutes = Math.floor(totalTime / 60);
+                        var seconds = totalTime % 60;
+                        var formattedTime = minutes + ":" + (seconds < 10 ? "0" + seconds : seconds);
 
-    // Hiển thị tổng thời gian đã làm bài
-    function showTotalTime() {
-        var minutes = Math.floor(totalTime / 60);
-        var seconds = totalTime % 60;
-        seconds = seconds < 10 ? "0" + seconds : seconds;
-        minutes = minutes < 10 ? "0" + minutes : minutes;
-        var totalTimeElement = document.getElementById('totalTime');
-        if (totalTimeElement) {
-            totalTimeElement.textContent = minutes + ":" + seconds;
-        }
+                        // Tạo input ẩn để lưu tổng thời gian vào form trước khi nộp
+                        var totalTimeInput = document.createElement('input');
+                        totalTimeInput.type = 'hidden';
+                        totalTimeInput.name = 'TotalTime';  // Tên này phải trùng với key trong controller
+                        totalTimeInput.value = formattedTime;
+
+                        var form = document.getElementById('tracNghiemForm');
+                        form.appendChild(totalTimeInput); // Thêm input vào form
+                        form.submit();
+                    }
+                });
+            }
+        });
     }
 
-  function confirmSubmission() {
-    Swal.fire({
-        title: "Bạn có chắc muốn nộp bài?",
-        text: "Bài làm sẽ không thể thay đổi!",
-        icon: "warning",
-        showCancelButton: true,
-        confirmButtonColor: "#3085d6",
-        cancelButtonColor: "#d33",
-        confirmButtonText: "Nộp bài",
-        cancelButtonText: "Hủy"
-    }).then((result) => {
-        if (result.isConfirmed) {
-            Swal.fire({
-                title: "Đã nộp bài!",
-                text: "Bài làm của bạn đã được nộp.",
-                icon: "success",
-                timer: 3000,
-                timerProgressBar: true,
-                didClose: () => {
-                    showTotalTime(); // Hiển thị tổng thời gian đã làm
-
-                    // Lấy thời gian làm bài
-                    var minutes = Math.floor(totalTime / 60);
-                    var seconds = totalTime % 60;
-                    var formattedTime = minutes + ":" + (seconds < 10 ? "0" + seconds : seconds);
-
-                    // Tạo input ẩn để lưu tổng thời gian vào form trước khi nộp
-                    var totalTimeInput = document.createElement('input');
-                    totalTimeInput.type = 'hidden';
-                    totalTimeInput.name = 'TotalTime';  // Tên này phải trùng với key trong controller
-                    totalTimeInput.value = formattedTime;
-
-                    var form = document.getElementById('tracNghiemForm');
-                    form.appendChild(totalTimeInput); // Thêm input vào form
-                    form.submit();
-                }
-            });
+        function markAsSelected(questionId) {
+            var button = document.getElementById('btn_' + questionId);
+            if (button.style.backgroundColor === '#3b4f95') {
+                button.style.backgroundColor = '#fff';
+            } else {
+                button.style.backgroundColor = '#3b4f95';
+                button.style.color = '#fff';
+            }
         }
-    });
-}
-
-    function markAsSelected(questionId) {
-        var button = document.getElementById('btn_' + questionId);
-        if (button.style.backgroundColor === '#3b4f95') {
-            button.style.backgroundColor = '#fff';
-        } else {
-            button.style.backgroundColor = '#3b4f95';
-            button.style.color = '#fff';
+        // Scroll tới câu hỏi khi nhấn vào nút
+        function scrollToQuestion(questionId) {
+            document.getElementById('question_' + questionId).scrollIntoView({ behavior: 'smooth' });
         }
-    }
-    // Scroll tới câu hỏi khi nhấn vào nút
-    function scrollToQuestion(questionId) {
-        document.getElementById('question_' + questionId).scrollIntoView({ behavior: 'smooth' });
-    }
 
 </script>
 
