--- a/ToeicWeb/Areas/Customer/Views/Luyentap/PracticePart1.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/Luyentap/PracticePart1.cshtml
@@ -23,7 +23,7 @@
                 {
                 // Kiểm tra giá trị của đường dẫn
 
-                    <div class="question-block" id="question_@Model.CauHoiNgeList[i].Id" style="padding: 10px; margin-bottom: 30px;">
+                    <div class="question-block" id="question_@Model.CauHoiNgeList[i].Id" style="padding: 10px;">
                        
                        
                         @if (!string.IsNullOrEmpty(Model.CauHoiNgeList[i].Audio))
