--- a/ToeicWeb/Areas/Customer/Views/Thi/ResultDetail.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/Thi/ResultDetail.cshtml
@@ -5,7 +5,6 @@
     <h2>@Model.Baithi.Tieu_de</h2>
 </div>
 
-
 <div class="container rounded-4" style="max-width: 1220px; box-shadow: 0 2px 4px rgba(0, 0, 0, .08), 0 4px 12px rgba(0, 0, 0, .08); margin-left: -6rem;">
     <div class="row">
         <!-- Phần tiêu đề Part -->
@@ -16,17 +15,17 @@
         </p>
 
         <!-- Phần câu hỏi và đáp án bên trái -->
-        @{
-            // Khởi tạo một danh sách để lưu trữ các tên ảnh đã hiển thị
-            List<string> displayedImages = new List<string>();
-        }
         <div class="col-md-8">
+            <!-- Hiển thị câu hỏi bài thi -->
             @for (int i = 0; i < Model.CauHoiBaiThiList.Count; i++)
             {
                 var question = Model.CauHoiBaiThiList[i];
 
-                <div class="question-block" id="question_@question.Id" style="padding: 10px;">
+                // Lấy câu trả lời của người dùng từ UserAnswer
+                var userAnswer = Model.UserAnswers.FirstOrDefault(ua => ua.CauHoiId == question.Id)?.Answer;
+                var isUserCorrect = Model.UserAnswers.FirstOrDefault(ua => ua.CauHoiId == question.Id)?.IsCorrect;
 
+                <div class="question-block" id="question_@question.Id" style="padding: 10px;">
                     <!-- Hiển thị âm thanh nếu có -->
                     @if (!string.IsNullOrEmpty(question.Audio))
                     {
@@ -37,34 +36,25 @@
                         </div>
                     }
 
-
                     @if (!string.IsNullOrEmpty(question.Image)) // Kiểm tra nếu có ảnh bài đọc
                     {
-                        // Kiểm tra nếu ảnh đã được hiển thị chưa
-                        if (!displayedImages.Contains(question.Image))
-                        {
-                            <hr style="border: 1px solid #ccc; margin-bottom: 20px;" /> <!-- Đường cắt ngang trên bài đọc -->
-
-                            <div class="reading-passage" style="margin-top: 20px;">
-                                <div class="box-image w-75 h-50">
-                                    <img src="~/@question.Image" alt="Question Image" />
+                        <hr style="border: 1px solid #ccc; margin-bottom: 20px;" /> <!-- Đường cắt ngang trên bài đọc -->
+                        <div class="reading-passage" style="margin-top: 20px;">
+                            <div class="box-image w-75 h-50">
+                                <img src="~/@question.Image" alt="Question Image" />
+                            </div>
+                            <!-- Giải thích đáp án bài đọc -->
+                            <div class="mt-2">
+                                <div class="toggle-explanation" onclick="toggleExplanation('readingExplanation_@question.Id')" style="cursor: pointer; color: #3b4f95; text-decoration: none;">
+                                    Hiện transcript <i class="bi bi-chevron-down"></i>
                                 </div>
-                                <!-- Giải thích đáp án bài đọc -->
-                                <div class="mt-2">
-                                    <div class="toggle-explanation" onclick="toggleExplanation('readingExplanation_@question.Id')" style="cursor: pointer; color: #3b4f95; text-decoration: none;">
-                                        Hiện transcript <i class="bi bi-chevron-down"></i>
-                                    </div>
-                                    <div class="explanation-content mt-2" id="readingExplanation_@question.Id">
-                                        <div class="">
-                                            @question.Transcript
-                                        </div>
+                                <div class="explanation-content mt-2" id="readingExplanation_@question.Id" style="display:none;">
+                                    <div>
+                                        @question.Transcript
                                     </div>
                                 </div>
                             </div>
-
-                            // Thêm tên ảnh vào danh sách đã hiển thị
-                            displayedImages.Add(question.Image);
-                        }
+                        </div>
                     }
 
                     <p><b>@Model.CauHoiBaiThiList[i].Thu_tu_cau. @Model.CauHoiBaiThiList[i].Cau_hoi</b></p>
@@ -76,23 +66,22 @@
                 new { Letter = "B", Text = Model.CauHoiBaiThiList[i].Dap_an_2 },
                 new { Letter = "C", Text = Model.CauHoiBaiThiList[i].Dap_an_3 },
                 new { Letter = "D", Text = Model.CauHoiBaiThiList[i].Dap_an_4 }
-
                 };
 
-                        var userAnswered = !string.IsNullOrEmpty(question.UserAnswer);
+                        var userAnswered = !string.IsNullOrEmpty(userAnswer);
                     }
 
                     @for (int j = 0; j < options.Length; j++)
                     {
                         var option = options[j];
                         var isCorrectAnswer = string.Equals(option.Text, question.Dap_an_dung, StringComparison.OrdinalIgnoreCase);
-                        var isUserAnswer = string.Equals(option.Text, question.UserAnswer, StringComparison.OrdinalIgnoreCase);
+                        var isUserAnswer = string.Equals(option.Text, userAnswer, StringComparison.OrdinalIgnoreCase);
 
                         <div>
-                            <!-- Apply color only if user answered, otherwise no color -->
-                            <span style="color: @(userAnswered && isUserAnswer ? (isCorrectAnswer ? "green" : "#e69a9c") : (userAnswered && isCorrectAnswer ? "green" : "black")); font-weight: @(userAnswered && (isUserAnswer || isCorrectAnswer) ? "bold" : "normal");">
+                            <!-- Apply color based on user's answer -->
+                            <span style="color: @(userAnswered ? (isUserAnswer ? (isCorrectAnswer ? "green" : "#e69a9c") : (isCorrectAnswer ? "green" : "black")) : "black"); font-weight: @(userAnswered && (isUserAnswer || isCorrectAnswer) ? "bold" : "normal");">
                                 <input type="radio" name="cauHoi_@question.Id" value="@option.Text" disabled @(isUserAnswer ? "checked" : "") />
-                                @options[j].Letter. @option.Text.
+                                @option.Letter. @option.Text
                             </span>
                         </div>
                     }
@@ -100,26 +89,24 @@
                     <!-- Đáp án đúng -->
                     <p><strong>Đáp án đúng:</strong> <span style="color:green; font-weight: bold">@question.Dap_an_dung</span></p>
 
-
-
-
                     <!-- Giải thích chi tiết đáp án -->
                     <div class="mt-2">
                         <div class="toggle-explanation" onclick="toggleExplanation('explanation_@question.Id')" style="cursor: pointer; color: #3b4f95; text-decoration: none;">
                             Giải thích chi tiết đáp án <i class="bi bi-chevron-down"></i>
                         </div>
-                        <div class="explanation-content mt-2" id="explanation_@question.Id">
+                        <div class="explanation-content mt-2" id="explanation_@question.Id" style="display:none;">
                             <div>
                                 @question.Giai_thich_dap_an
                             </div>
                         </div>
                     </div>
-
                 </div>
             }
         </div>
     </div>
 </div>
+
+
 
 <div style="position: fixed; top: 130px; right: 10px; width: 250px; box-shadow: 0 2px 4px rgba(0, 0, 0, .08), 0 4px 12px rgba(0, 0, 0, .08); border-radius: 10px; padding: 18px;">
     <h4>Kết quả làm bài:</h4>
@@ -128,7 +115,7 @@
             <!-- Total Time Card -->
             <div class="row mt-3">
                 <div class=" d-sm-flex">
-                            <i class="bi bi-clock-fill card-icon me-sm-3" style="color: dodgerblue;"></i>
+                    <i class="bi bi-clock-fill card-icon me-sm-3" style="color: dodgerblue;"></i>
                     <h5 class="card-title text-dark me-sm-3">Thời gian làm bài:</h5>
                     <p class="card-text">@Model.TotalTime</p>
                 </div>
@@ -136,9 +123,9 @@
             <!-- Correct Answer Card -->
             <div class="row mt-3">
                 <div class=" d-sm-flex">
-                    <i class="bi bi-check-circle-fill text-success card-icon me-sm-3 "></i>
+                    <i class="bi bi-check-circle-fill text-success card-icon me-sm-3"></i>
                     <h5 class="card-title text-success me-sm-3">Trả lời đúng:</h5>
-                    <p class="card-text">@ViewBag.CorrectAnswers</p>
+                    <p class="card-text">@Model.TestResult.CorrectAnswers</p> <!-- Sửa đổi ở đây -->
                 </div>
             </div>
             <!-- Incorrect Answer Card -->
@@ -146,7 +133,7 @@
                 <div class=" d-sm-flex">
                     <i class="bi bi-x-circle-fill text-danger card-icon me-sm-3"></i>
                     <h5 class="card-title text-danger me-sm-3">Trả lời sai:</h5>
-                    <p class="card-text ">@ViewBag.IncorrectAnswers</p>
+                    <p class="card-text">@Model.TestResult.IncorrectAnswers</p> <!-- Sửa đổi ở đây -->
                 </div>
             </div>
             <!-- Skipped Question Card -->
@@ -154,11 +141,9 @@
                 <div class=" d-sm-flex">
                     <i class="bi bi-dash-circle-fill card-icon me-sm-3"></i>
                     <h5 class="card-title me-sm-3">Bỏ qua:</h5>
-                    <p class="card-text ">@ViewBag.SkippedQuestions</p>
+                    <p class="card-text">@Model.TestResult.SkippedQuestions</p> <!-- Sửa đổi ở đây -->
                 </div>
             </div>
-
-
         </div>
     </div>
 </div>
