--- a/ToeicWeb/Areas/Customer/Views/Thi/ThiTH.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/Thi/ThiTH.cshtml
@@ -1,29 +1,39 @@
-﻿@model List<Ma_bai_thi>
+﻿@model Tuple<List<Ma_bai_thi>, List<int>> // Sử dụng tuple để nhận cả hai danh sách
 
-@for (int i = 0; i < Model.Count; i++)
+@{
+    var mabaitaps = Model.Item1; // Danh sách bài thi
+    var completedTests = Model.Item2; // Danh sách bài thi đã làm
+}
+
+@for (int i = 0; i < mabaitaps.Count; i++)
 {
-    @if (@Model[i].ExamType == "TH")
+    @if (mabaitaps[i].ExamType == "TH")
     {
-        <a class="col-lg-3 col-sm-6 text-decoration-none" asp-area="Customer" asp-controller="Thi" asp-action="PracticeTH" asp-route-baiTapId="@Model[i].Id">
+        <a class="col-lg-3 col-sm-6 text-decoration-none" asp-area="Customer" asp-controller="Thi" asp-action="PracticeTH" asp-route-baiTapId="@mabaitaps[i].Id">
             <div class="col d-sm-flex justify-content-sm-center">
                 <div class="col-8 p-1 border-primary mb-3 hV">
                     <div class="shadow border rounded bgC">
                         <div class="pb-0">
                             <div class="pl-1 m-2 mx-3 ">
-
-                                <p class="text-dark mb-2"> <b>@Model[i].Tieu_de</b></p>
-
-                                <p class="">
-                                    <span class="badge rounded-pill bg-primary">
-                                        2024 Format
-                                    </span>
-                                </p>
+                                <p class="text-dark mb-2"><b>@mabaitaps[i].Tieu_de</b></p>
+                                <div class="d-lg-flex justify-content-lg-between">
+                                    <p class="">
+                                        <span class="badge rounded-pill bg-primary">
+                                            2024 Format
+                                        </span>
+                                    </p>
+                                    @if (completedTests.Contains(mabaitaps[i].Id)) // Kiểm tra bài thi đã làm
+                                    {
+                                        <p class="text-success mt-2"><i>Bài thi đã làm</i></p>
+                                        // Hiển thị thông báo
+                                    }
+                                </div>
+                               
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </a>
-
     }
 }
