--- a/ToeicWeb/Areas/Customer/Views/Thi/ResultDetail.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/Thi/ResultDetail.cshtml
@@ -117,7 +117,7 @@
                 <div class=" d-sm-flex">
                     <i class="bi bi-clock-fill card-icon me-sm-3" style="color: dodgerblue;"></i>
                     <h5 class="card-title text-dark me-sm-3">Thời gian làm bài:</h5>
-                    <p class="card-text">@Model.TotalTime</p>
+                    <p class="card-text">@Model.TestResult.Duration</p>
                 </div>
             </div>
             <!-- Correct Answer Card -->
